2008-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gfile.c:
	* gfilemonitor.[hc]:
	* gmemoryinputstream.c:
	* gmemoryoutputstream.c:
	* gmountoperation.c:
	* gthemedicon.c: Documentation updates

2008-01-20  Murray Cumming  <murrayc@murrayc.com>

	* gfile.c: documentation: Fixed more minor 
	typos.

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* gmount.c: (g_mount_remount): documentation: 
	Mention g_mount_remount_finish() instead of 
	g_mount_unmount_finish().

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* gappinfo.c:
	* gcancellable.c:
	* gfile.c: Fixed some minor typos in the 
	documentation. 

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* gio/gvolumemonitor.c: 
	(g_volume_monitor_get_connected_drives): 
	(g_volume_monitor_get_volumes): 
	(g_volume_monitor_get_mounts): Documentation: 
	Clarify the ownership of the regurn GLists.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.h:
	Add the async find_enclosing_mount version
	to the header file too.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
	Add async version of find_enclosing_mount
	with default implementation.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
        (g_file_copy):
        (g_file_move):
	Allow calls to implementation of copy and write
	even if the type of the file implementations is
	different. This can be used to implement native
	upload and download calls in a vfs.
	
        * glocalfile.c:
        (g_local_file_move):
	Protect against the case where move is called
	with one file not being local.
	
	Make sure we call the progress callback once
	in the native move operation so that the caller
	knows how many bytes were copied.

2008-01-16  Murray Cumming  <murrayc@murrayc.com>

	* gappinfo.c:
	* gdatainputstream.c:
	* gfile.c:
	* gfileoutputstream.c:
	* ginputstream.c:
	* gmount.c:
	* goutputstream.c:
	* gseekable.c:
	* gunixmounts.c: Corrected some typos in the documentation:
	occured -> occurred.